--- a/webpack/package.json
+++ b/webpack/package.json
@@ -5,6 +5,7 @@
     "express": "^4.16.2",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
+    "jquery": "^3.2.1",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.1",
@@ -18,7 +19,7 @@
     "build": "webpack",
     "watch": "webpack --watch",
     "start": "webpack-dev-server --open --port 8881",
-     "server": "node server.js"
+    "server": "node server.js"
   },
   "keywords": [],
   "author": "",
