--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
     "express": "^4.15.4"
   },
   "devDependencies": {
-    "vue": "^2.5.16"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "html-webpack-plugin": "^3.2.0",
+    "vue": "^2.5.16",
+    "webpack": "^4.12.1"
   }
 }
