--- a/webpack-react/package.json
+++ b/webpack-react/package.json
@@ -14,7 +14,13 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
-    "html-webpack-plugin": "^3.2.0"
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.12.1"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0"
