--- a/webpackandreact/package.json
+++ b/webpackandreact/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open"
+    "dev": "webpack-dev-server --open --colors --progress --inline --config config/webpack.dev.js",
+    "build":"webpack --colors --progress --config config/webpack.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +26,8 @@
     "style-loader": "^0.21.0",
     "webpack": "^4.12.1",
     "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.3"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
