--- a/webpackandreact/package.json
+++ b/webpackandreact/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --open --colors --progress --inline --config config/webpack.dev.js",
-    "build":"webpack --colors --progress --config config/webpack.prod.js"
+    "build": "webpack --colors --progress --config config/webpack.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,8 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-dynamic-import-webpack": "^1.0.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
