--- a/webpack-vue/package.json
+++ b/webpack-vue/package.json
@@ -40,6 +40,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "vue": "^2.5.16",
+    "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   }
 }
