--- a/ssr/package.json
+++ b/ssr/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "vue": "^2.5.16",
+    "vue-router": "^3.0.1",
+    "vue-server-renderer": "^2.5.16",
+    "vuex": "^3.0.1"
   }
 }
