--- a/vue-ssr-demo-master/package.json
+++ b/vue-ssr-demo-master/package.json
@@ -18,10 +18,15 @@
     "html-webpack-plugin": "^2.30.1",
     "vue": "^2.5.13",
     "vue-loader": "^13.6.2",
+    "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.13",
     "vue-template-compiler": "^2.5.13",
     "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0",
     "webpack": "^3.10.0",
     "webpack-merge": "^4.1.1"
+  },
+  "devDependencies": {
+    "babel-plugin-dynamic-import-webpack": "^1.0.2"
   }
 }
