--- a/mutl-page/package.json
+++ b/mutl-page/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "glob": "^7.1.2",
     "node-sass": "^4.9.2",
     "vue": "^2.5.16",
     "vue-template-compiler": "^2.5.16"
