--- a/mutl-page/package.json
+++ b/mutl-page/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"no test specified\" && exit 0"
+    "test": "echo \"no test specified\" && exit 0",
+    "dev": "webpack-dev-server --config webpack.config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "glob": "^7.1.2",
+    "jquery": "^3.3.1",
+    "ms": "^2.1.1",
     "node-sass": "^4.9.2",
     "vue": "^2.5.16",
     "vue-template-compiler": "^2.5.16"
@@ -24,6 +28,7 @@
     "html-webpack-plugin": "^3.2.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
-    "vue-loader": "^15.2.5"
+    "vue-loader": "^15.2.5",
+    "webpack-dev-server": "^3.1.4"
   }
 }
