--- a/npm/package.json
+++ b/npm/package.json
@@ -24,6 +24,10 @@
     "shelljs": "^0.8.2",
     "url-loader": "^1.0.1",
     "webpack": "^4.11.1",
+    "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
+  },
+  "dependencies": {
+    "webpack-cli": "^3.0.8"
   }
 }
