--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "babel-preset-env": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "vue": "^2.5.16",
-    "webpack": "^4.12.1"
+    "webpack": "^4.12.1",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
   }
 }
