--- a/webpackandreact/package.json
+++ b/webpackandreact/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --colors --progress --inline --config config/webpack.dev.js",
+    "dev": "webpack-dev-server --open --colors  --inline --config config/webpack.dev.js",
     "build": "webpack --colors --progress --config config/webpack.prod.js"
   },
   "keywords": [],
