--- a/webpack/package.json
+++ b/webpack/package.json
@@ -1,28 +1,21 @@
 {
-  "devDependencies": {
-    "clean-webpack-plugin": "^0.1.17",
-    "css-loader": "^0.28.7",
-    "express": "^4.16.2",
-    "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.30.1",
-    "jquery": "^3.2.1",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-middleware": "^1.12.1",
-    "webpack-dev-server": "^2.9.4"
-  },
   "name": "webpack",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "dependencies": {},
   "scripts": {
-    "build": "webpack",
-    "watch": "webpack --watch",
-    "start": "webpack-dev-server --open --port 8881",
-    "server": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"webpack-dev-server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "devDependencies": {
+    "clean-webpack-plugin": "^0.1.19",
+    "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.3.1"
+  },
+  "dependencies": {
+    "webpack-dev-server": "^3.1.10"
+  }
 }
